Code refactoring, NodeMenu class added

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,57 +1,4 @@
 :root {
     --dark-border: 0.2rem solid darkslategrey;
-}
-
-#tree {
-    border: var(--dark-border);
-    border-radius: 2rem;
-    padding: 1rem;
-    min-height: 24rem;
-}
-
-.node {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    height: fit-content;
-    flex: 1;
-}
-
-.value-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.value {
-    align-items: center;
-    background-color: aquamarine;
-    border: var(--dark-border);
-    border-radius: 2rem;
-    display: flex;
-    cursor: pointer;
-    height: 2rem;
-    text-align: center;
-    width: 2rem;
-}
-
-.separator {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-.vline {
-    width: 0.2rem;
-    height: 0.4rem;
-    background-color: darkslategrey;
-}
-
-.hline {
-    width: 50%;
-    height: 1rem;
-    border: var(--dark-border);
-    border-bottom: none;
+    --dark-color: darkslategrey;
 }
