--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -10,5 +10,9 @@
     & > div {
         border-bottom: var(--dark-border);
         cursor: pointer;
+
+        &:hover {
+            border-color: var(--light-color);
+        }
     }
 }
