--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -1,7 +1,8 @@
 .node-menu {
     display: flex;
     gap: 1rem;
-    transform: translate(-40%, 140%);
+    height: fit-content;
+    transform: translate(-4rem, 0);
     opacity: 0;
     position: absolute;
     transition: opacity 0.2s ease-in;
