Improve Style, progress on addition

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,9 @@
 :root {
-    --dark-border: 0.2rem solid darkslategrey;
     --dark-color: darkslategrey;
     --light-color: lightseagreen;
+    --leaf-color: #8bc34a;
+    --branch-color: #a5582a;
+    --dark-border: 0.2rem solid var(--dark-color);
+    --leaf-border: 0.2rem solid var(--leaf-color);
+    --branch-border: 0.2rem solid var(--branch-color);
 }
