--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -2,19 +2,20 @@
     display: flex;
     gap: 1rem;
     height: fit-content;
-    transform: translate(-4rem, 0);
+    font-size: 2rem;
+    transform: translate(-5rem, 0);
     opacity: 0;
     position: absolute;
     transition: opacity 0.2s ease-in;
     z-index: 100;
 
     & > div {
-        transition: all 0.2s ease-in;
         cursor: pointer;
-        color: var(--dark-color);
+        color: var(--leaf-color);
+        transition: all 0.2s ease-in;
 
         &:hover {
-            color: var(--light-color);
+            font-weight: 700;
         }
     }
 }
