--- a/public/css/tree.css
+++ b/public/css/tree.css
@@ -1,9 +1,7 @@
 #tree {
-    border: var(--dark-border);
     border-radius: 2rem;
     position: relative;
     padding: 1rem;
-    min-height: 24rem;
 }
 
 .node-container {
@@ -17,23 +15,23 @@
 
 input.node {
     align-items: center;
-    background-color: aquamarine;
-    border: var(--dark-border);
+    background-color: var(--light-color);
+    border: var(--leaf-border);
     border-radius: 2rem;
     display: flex;
+    color: white;
     cursor: pointer;
+    font-size: 1rem;
     height: 2rem;
     text-align: center;
     width: 2rem;
 
     &:hover {
-        border-color: var(--light-color);
-        outline-color: var(--light-color);
+        font-weight: 600;
     }
 
     &:focus {
-        border-color: var(--light-color);
-        outline-color: var(--light-color);
+        font-weight: 600;
     }
 
     &:focus-visible {
@@ -51,12 +49,12 @@ input.node {
 .vline {
     width: 0.2rem;
     height: 0.4rem;
-    background-color: darkslategrey;
+    background-color: var(--branch-color);
 }
 
 .hline {
     width: 50%;
     height: 1rem;
-    border: var(--dark-border);
+    border: var(--branch-border);
     border-bottom: none;
 }
