--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -3,7 +3,7 @@
     gap: 1rem;
     height: fit-content;
     font-size: 2rem;
-    transform: translate(-5rem, 0);
+    transform: translate(-2.4rem, 2rem);
     opacity: 0;
     position: absolute;
     transition: opacity 0.2s ease-in;
