Adding sub tree element and remove join line

--- a/public/css/tree.css
+++ b/public/css/tree.css
@@ -13,6 +13,12 @@
     flex: 1;
 }
 
+.children-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
 input.node {
     align-items: center;
     background-color: var(--light-color);
