--- a/public/css/tree.css
+++ b/public/css/tree.css
@@ -3,3 +3,20 @@
     position: relative;
     padding: 1rem;
 }
+
+.root {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.children-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.child {
+    display: flex;
+    min-width: 2rem;
+}
