--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -1,19 +1,44 @@
 .node-menu {
     display: flex;
-    gap: 1rem;
     height: fit-content;
-    font-size: 2rem;
-    transform: translate(-2.4rem, 2rem);
+    gap: 0.5rem;
+    transform: translate(-16%, 2.2rem);
     opacity: 0;
     position: absolute;
-    z-index: 100;
+    z-index: 20;
 
-    & > div {
+    .button {
+        display: flex;
         cursor: pointer;
         color: var(--leaf-color);
+        width: 0.5rem;
+        height: 0.5rem;
+        transition: all 0.2s;
 
         &:hover {
-            font-weight: 700;
+            transform: scale(1.5);
+        }
+
+        .arrow {
+            border: var(--branch-border);
+            border-bottom: none;
+            width: 0.5rem;
+        }
+
+        .right {
+            border-left: none;
+        }
+
+        .left {
+            border-right: none;
+        }
+
+        .delete {
+            border-color: var(--red-color);
+            border-bottom: none;
+            border-left: none;
+            border-right: none;
+            width: 1rem;
         }
     }
 }
