Add operations menu

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -7,4 +7,5 @@
     --dark-border: 0.2rem solid var(--dark-color);
     --leaf-border: 0.2rem solid var(--leaf-color);
     --branch-border: 0.2rem solid var(--branch-color);
+    --red-border: 0.2rem solid var(--red-color);
 }
