Add dfs and bfs options

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -10,8 +10,15 @@
     left: 1rem;
     width: fit-content;
 
+    select {
+        border: 0.1rem solid var(--dark-color);
+        background-color: none;
+        border-radius: 0.4rem;
+        outline: none;
+    }
+
     input {
-        border: var(--dark-border);
+        border: 0.1rem solid var(--dark-color);
         border-radius: 0.4rem;
         padding: 0.2rem;
 
@@ -21,7 +28,7 @@
     }
 
     button {
-        border: var(--dark-border);
+        border: 0.1rem solid var(--dark-color);
         background-color: none;
         border-radius: 0.4rem;
         outline: none;
