--- a/public/css/nodeMenu.css
+++ b/public/css/nodeMenu.css
@@ -2,7 +2,7 @@
     display: flex;
     height: fit-content;
     gap: 0.5rem;
-    transform: translate(-16%, 2.2rem);
+    transform: translate(0, 2.8rem);
     opacity: 0;
     position: absolute;
     z-index: 20;
