--- a/public/css/naryTree.css
+++ b/public/css/naryTree.css
@@ -5,6 +5,7 @@
         flex-direction: column;
         height: fit-content;
         gap: 1rem;
+        margin-top: 0.5rem;
         width: fit-content;
     }
 
@@ -15,6 +16,9 @@
     }
 
     .children-container {
+        border: var(--branch-border);
+        border-inline: none;
+        border-bottom: none;
         display: flex;
         flex-direction: row;
         gap: 1rem;
