--- a/public/css/tree.css
+++ b/public/css/tree.css
@@ -1,15 +1,24 @@
-.root {
+#tree-container {
+    align-items: center;
+    border: var(--dark-border);
+    border-radius: 1rem;
     display: flex;
-    width: 100%;
-    justify-content: center;
-}
+    flex-direction: column;
+    padding: 1rem;
 
-.children-container {
-    display: flex;
-    flex-direction: row;
-}
+    .root {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
 
-.child {
-    display: flex;
-    min-width: 2rem;
+    .children-container {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .child {
+        display: flex;
+        min-width: 2rem;
+    }
 }
